# StudentSystem

./: CMakeLists.txt  main.cpp
data/: data.json  user.json
include/: DataService.h  DataSystem.h  Manager.h  Menu.h  Role.h  Student.h  UserService.h  UserSystem.h
src/: DataService.cpp  DataSystem.cpp  Manager.cpp  Menu.cpp  Role.cpp  Student.cpp  UserService.cpp  UserSystem.cpp
